<resources>
    <string name="app_name">Nes-Collection</string>
    <string name="action_settings">Settings</string>
    <string name="action_credits">Credits</string>
    <string name="action_wishlist">Wish list</string>
    <string name="name">name</string>
    <string name="title_activity_all_games">AllGames</string>
    <string name="title_activity_game_detail">GameDetail</string>
    <string name="title_activity_navigation_menu">NavigationMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_search_results">SearchResults</string>
    <string name="title_activity_owned_games">OwnedGames</string>
    <string name="ownedgames">A B Us</string>
    <string name="cartimage">cartimage</string>
    <string name="boximage">boximage</string>
    <string name="manualimage">manualimage</string>
    <string name="title_activity_edit_owned_game">EditOwnedGame</string>
    <string name="Owned">Owned</string>
    <string name="gamename">Game Name</string>
    <string name="palA">Pal A</string>
    <string name="palBcart">Pal B</string>
    <string name="US">US</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="title_activity_needed_games">NeededGames</string>
    <string name="Totalgames">Total games</string>
    <string name="title_activity_nes_collection">NesCollection</string>
    <string name="AllGames">All Games</string>
    <string name="Needed">Needed</string>
    <string name="Stats">Statistics</string>
    <string name="title_activity_main_page">MainPage</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Title">Nes Collection</string>
    <string name="title_activity_favourite_games">FavouriteGames</string>
    <string name="whichregion">Collecting Region</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Settings">Settings</string>
    <string name="Unlicensed">Include unlicensed games</string>
    <string name="RandomHeading">Your randomly selected game is</string>
    <string-array name="currencyArray">
        <item>£</item>
        <item>€</item>
        <item>$</item>
    </string-array>
    <string-array name="regionsArray">
        <item>Pal A UK</item>
        <item>Pal A</item>
        <item>Pal B</item>
        <item>Ntsc</item>
        <item>Pal A + Pal B</item>
        <item>Pal A + Ntsc</item>
        <item>Pal B + Ntsc</item>
        <item>All Regions</item>
    </string-array>
    <string-array name="searchArray">
        <item>name</item>
        <item>publisher</item>
        <item>developer</item>
        <item>genre</item>
        <item>subgenre</item>
        <item>year</item>
        <item>synopsis</item>
    </string-array>
    <string-array name="yearArray">
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
    </string-array>
    <string-array name="publisherArray">
        <item>ASC</item>
        <item>ASCII Entertainment</item>
        <item>ATLUS</item>
        <item>AVE</item>
        <item>Absolute Entertainment</item>
        <item>Acclaim</item>
        <item>Active Enterprises</item>
        <item>Activision</item>
        <item>Advance Communication Company</item>
        <item>American Game Cartridges</item>
        <item>American Sammy</item>
        <item>American Softworks</item>
        <item>American Video</item>
        <item>American Video Entertainment</item>
        <item>Arcadia Systems</item>
        <item>Asmik Corporation of America</item>
        <item>Atari Games</item>
        <item>Atlus</item>
        <item>Bandai</item>
        <item>Bandai America Inc</item>
        <item>Broderbund</item>
        <item>Bullet Proof Software</item>
        <item>Bunch Games</item>
        <item>Bunch Games Inc</item>
        <item>CBS</item>
        <item>Caltron</item>
        <item>Camerica</item>
        <item>Capcom</item>
        <item>Codemasters</item>
        <item>Color Dreams</item>
        <item>Culture Brain</item>
        <item>Data East</item>
        <item>Data East USA</item>
        <item>Electro Brain</item>
        <item>Electronic Arts</item>
        <item>Elite</item>
        <item>Enix America Inc</item>
        <item>Exidy</item>
        <item>FCI</item>
        <item>FCI Inc</item>
        <item>GameTek</item>
        <item>Gremlin</item>
        <item>HAL</item>
        <item>HAL Labs</item>
        <item>HES</item>
        <item>HES Interactive</item>
        <item>Hewson Consultants</item>
        <item>Hi Tech Expressions</item>
        <item>Hi-Tech</item>
        <item>Hot B</item>
        <item>Hudson</item>
        <item>Hudson Soft</item>
        <item>INTV</item>
        <item>Imagineer</item>
        <item>Infocom</item>
        <item>Infogrames</item>
        <item>Irem</item>
        <item>JVC Musical Industries Inc</item>
        <item>JVC, Lucasfilm Games</item>
        <item>Jaleco</item>
        <item>Jaleco Entertainment</item>
        <item>Kemco</item>
        <item>Koei</item>
        <item>Konami</item>
        <item>LJN</item>
        <item>LJN Ltd</item>
        <item>Laser Beam</item>
        <item>Loriciel</item>
        <item>MB</item>
        <item>Matchbox</item>
        <item>Mattel</item>
        <item>Meldac</item>
        <item>MicroProse</item>
        <item>Milton Bradley</item>
        <item>Mindscape</item>
        <item>Mindscape Inc</item>
        <item>NTVIC</item>
        <item>Namco</item>
        <item>Natsume</item>
        <item>Nexoft</item>
        <item>Nihon Bussan</item>
        <item>Nintendo</item>
        <item>Ocean</item>
        <item>Odyssey Software</item>
        <item>Palcom</item>
        <item>Parker Brothers</item>
        <item>Pony Canyon</item>
        <item>Romstar</item>
        <item>SNK</item>
        <item>Sales Curve</item>
        <item>Sammy</item>
        <item>Sammy Studios</item>
        <item>Sei</item>
        <item>Seika Corp</item>
        <item>Seta Corporation</item>
        <item>Sofel</item>
        <item>Software Toolworks</item>
        <item>Sony Imagesoft</item>
        <item>Square</item>
        <item>SquareSoft</item>
        <item>SunSoft</item>
        <item>THQ</item>
        <item>Taito</item>
        <item>Taito Corporation</item>
        <item>Takara</item>
        <item>Technos</item>
        <item>Technōs Japan</item>
        <item>Tecmo</item>
        <item>Tengen</item>
        <item>Titus</item>
        <item>Toho</item>
        <item>Tradwest</item>
        <item>Ubi Soft</item>
        <item>Takeru</item>
        <item>Tamtex</item>
        <item>Taxan</item>
        <item>Technos</item>
        <item>Tecmo</item>
        <item>Ultra</item>
        <item>Ultra Games</item>
        <item>Vic Tokai</item>
        <item>Virgin</item>
        <item>Virgin Games</item>
        <item>Virgin Interactive</item>
        <item>Wisdom Tree</item>
    </string-array>
    <string name="Currency">Currency</string>
    <string name="ShelfSize">Number of games per shelf</string>
</resources>