<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uk.co.pixoveeware.nes_collection.Settings"
    tools:showIn="@layout/activity_settings"
    android:background="#CCCAC7">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/whichregion"
        android:id="@+id/lblTitle"
        android:gravity="center"
        android:background="#CCCAC7"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginRight="5dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dropRegion"
        android:spinnerMode="dropdown"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/lblTitle"
        android:layout_toEndOf="@+id/lblTitle" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Unlicensed"
        android:id="@+id/chkUnlicensed"
        android:layout_below="@+id/dropRegion"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:text="New Text"
        android:id="@+id/lblDivider"
        android:layout_below="@+id/chkUnlicensed"
        android:layout_centerHorizontal="true"
        android:background="#777272"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Currency"
        android:id="@+id/lblCurrency"
        android:layout_below="@+id/lblDivider"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000"
        android:layout_marginRight="5dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dropCurrency"
        android:layout_below="@+id/lblDivider"
        android:layout_toRightOf="@+id/lblCurrency"
        android:layout_toEndOf="@+id/lblCurrency" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:text="New Text"
        android:id="@+id/lblDivider2"
        android:layout_below="@+id/dropCurrency"
        android:layout_centerHorizontal="true"
        android:background="#777272"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ShelfSize"
        android:id="@+id/textView4"
        android:layout_below="@+id/lblDivider2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000"
        android:layout_marginRight="5dp" />

    <EditText
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtShelfSize"
        android:layout_alignTop="@+id/lblDivider2"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ok"
        android:id="@+id/rgnOk"
        android:layout_alignTop="@+id/rgnCancel"
        android:layout_toLeftOf="@+id/rgnCancel"
        android:layout_toStartOf="@+id/rgnCancel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:id="@+id/rgnCancel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignRight="@+id/lblDivider2"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp" />
    <android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- As the main content view, the view below consumes the entire
             space available using match_parent in both dimensions. -->
        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- android:layout_gravity="start" tells DrawerLayout to treat
             this as a sliding drawer on the left side for left-to-right
             languages and on the right side for right-to-left languages.
             The drawer is given a fixed width in dp and extends the full height of
             the container. A solid background is used for contrast
             with the content view. -->
        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="180dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:background="#82b3b0b0"/>
    </android.support.v4.widget.DrawerLayout>
</RelativeLayout>
