<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uk.co.pixoveeware.nes_collection.EditOwnedGame"
    tools:showIn="@layout/activity_edit_owned_game"
    android:background="#c7bda9">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout2">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/gamename"
        android:id="@+id/lblGame"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/linearLayout"
        android:layout_alignEnd="@+id/linearLayout"
        android:layout_marginBottom="5dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imgCover"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:maxHeight="200dp"
        android:maxWidth="150dp"
        android:src="@drawable/placeholder"
        android:layout_below="@+id/lblGame"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    </RelativeLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Owned"
            android:id="@+id/lblOwned"
            android:textStyle="bold"
            android:textAlignment="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linCart"
            android:layout_below="@id/lblOwned"
            android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgCart"
            android:src="@drawable/cart"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="2dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkPalACart"
            android:layout_toRightOf="@+id/imgCart"
            android:layout_toEndOf="@+id/imgCart"
            android:text="@string/palA"
            android:layout_alignBottom="@+id/imgCart" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/palBcart"
            android:id="@+id/chkPalBCart"
            android:layout_alignTop="@+id/chkUSCart"
            android:layout_toRightOf="@+id/chkPalACart"
            android:layout_toEndOf="@+id/chkPalACart"
            android:layout_alignBottom="@+id/chkPalACart" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/US"
            android:id="@+id/chkUSCart"
            android:layout_alignTop="@+id/chkPalACart"
            android:layout_toRightOf="@+id/chkPalBCart"
            android:layout_toEndOf="@+id/chkPalBCart"
            android:layout_alignBottom="@+id/chkPalACart" />
    </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linCart"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linBox"
            android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgBox"
            android:src="@drawable/box"
            android:layout_below="@id/linBox"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="2dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkPalABox"
            android:layout_below="@+id/lblHeader"
            android:layout_toRightOf="@+id/imgCart"
            android:layout_toEndOf="@+id/imgCart"
            android:text="@string/palA"
            android:layout_alignBottom="@+id/imgCart" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/palBcart"
            android:id="@+id/chkPalBBox"
            android:layout_alignTop="@+id/chkUSCart"
            android:layout_toRightOf="@+id/chkPalACart"
            android:layout_toEndOf="@+id/chkPalACart"
            android:layout_alignBottom="@+id/chkPalACart" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/US"
            android:id="@+id/chkUSBox"
            android:layout_alignTop="@+id/chkPalACart"
            android:layout_toRightOf="@+id/chkPalBCart"
            android:layout_toEndOf="@+id/chkPalBCart"
            android:layout_alignBottom="@+id/chkPalACart" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linBox"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linManual"
            android:gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgManual"
            android:src="@drawable/manual"
            android:layout_below="@id/lblHeader"
            android:layout_marginRight="3dp"
            android:layout_marginLeft="2dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkPalAmanual"
            android:layout_below="@+id/lblHeader"
            android:layout_toRightOf="@+id/imgCart"
            android:layout_toEndOf="@+id/imgCart"
            android:text="@string/palA"
            android:layout_alignBottom="@+id/imgCart" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/palBcart"
            android:id="@+id/chkPalBmanual"
            android:layout_alignTop="@+id/chkUSCart"
            android:layout_toRightOf="@+id/chkPalACart"
            android:layout_toEndOf="@+id/chkPalACart"
            android:layout_alignBottom="@+id/chkPalACart" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/US"
            android:id="@+id/chkUSmanual"
            android:layout_alignTop="@+id/chkPalACart"
            android:layout_toRightOf="@+id/chkPalBCart"
            android:layout_toEndOf="@+id/chkPalBCart"
            android:layout_alignBottom="@+id/chkPalACart" />
    </LinearLayout>

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:id="@+id/btnCancel"
            android:layout_marginLeft="73dp"
            android:layout_marginStart="73dp"
            android:layout_below="@+id/linManual"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="@string/Ok"
            android:id="@+id/btnOk"
            android:layout_below="@+id/linManual"
            android:layout_toRightOf="@+id/btnCancel"
            android:layout_toEndOf="@+id/btnCancel"
            android:layout_marginLeft="47dp"
            android:layout_marginStart="47dp" />
    </RelativeLayout>
</RelativeLayout>










